--- a/index.html
+++ b/index.html
@@ -5,23 +5,8 @@ layout: default
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
-  <head>
-    <!-- Matomo -->
-    <script type="text/javascript">
-     var _paq = window._paq = window._paq || [];
-     /* tracker methods like "setCustomDimension" should be called before "trackPageView" */
-     _paq.push(['trackPageView']);
-     _paq.push(['enableLinkTracking']);
-     (function() {
-       var u="https://bcmertz.matomo.cloud/";
-       _paq.push(['setTrackerUrl', u+'matomo.php']);
-       _paq.push(['setSiteId', '1']);
-       var d=document, g=d.createElement('script'), s=d.getElementsByTagName('script')[0];
-       g.type='text/javascript'; g.async=true; g.src='//cdn.matomo.cloud/bcmertz.matomo.cloud/matomo.js'; s.parentNode.insertBefore(g,s);
-     })();
-    </script>
-    <!-- End Matomo Code -->
-    <!-- 2021-01-26 Tue 12:52 -->
+<head>
+<!-- 2021-02-10 Wed 15:58 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Portfolio</title>
@@ -261,37 +246,8 @@ for the JavaScript code in this tag.
 <body>
 <div id="content">
 <h1 class="title">Portfolio</h1>
-<div id="table-of-contents">
-<h2>Table of Contents</h2>
-<div id="text-table-of-contents">
-<ul>
-<li><a href="#org8cc6509">1. Indoor Automated Garden</a></li>
-<li><a href="#orgccfbf07">2. Linux RICE (Github)</a>
-<ul>
-<li><a href="#org771ca51">2.1. Overview</a></li>
-</ul>
-</li>
-<li><a href="#org7a4fcd3">3. Open Source Coding Projects</a>
-<ul>
-<li><a href="#org65f9d14">3.1. Search Within Video (Github Website)</a></li>
-<li><a href="#org622f2fe">3.2. Ray Tracer (Github)</a></li>
-<li><a href="#org67c0261">3.3. Steganographic Encoder (Github)</a></li>
-</ul>
-</li>
-<li><a href="#org4f4c761">4. Emacs Build (Github)</a>
-<ul>
-<li><a href="#org5c1b61d">4.1. Measuring startup time</a></li>
-<li><a href="#org73a71cc">4.2. Email</a></li>
-<li><a href="#org0540635">4.3. Emacs as window manager</a></li>
-<li><a href="#org7be5f30">4.4. Org Mode</a></li>
-<li><a href="#org68557e4">4.5. Latex dev environment and resume</a></li>
-</ul>
-</li>
-</ul>
-</div>
-</div>
-<div id="outline-container-org8cc6509" class="outline-2">
-<h2 id="org8cc6509"><span class="section-number-2">1</span> Indoor Automated Garden</h2>
+<div id="outline-container-orgb8226a4" class="outline-2">
+<h2 id="orgb8226a4"><span class="section-number-2">1</span> Indoor Automated Garden</h2>
 <div class="outline-text-2" id="text-1">
 <p>
 In 2018 after completing the Recurse center I moved to the Bronx to help a friend keep her childhood apartment in her name. I have alwayds wanted to have a garden but I needed to reside in the city for my transgender services at Mount Sinai. So I brainstormed ways to create the garden of my dreams inside a northern exposure apartment in the middle of a food desert and green desert.
@@ -317,51 +273,51 @@ A bell pepper coming in! By this point I added in a rtc<sub>ds1307</sub> real ti
 Here is the janky c code I settled on :)
 </p>
 <div class="org-src-container">
-<pre class="src src-c">// Date and time functions using a DS1307 RTC connected via I2C and Wire lib
-#include &lt;Wire.h&gt;
-#include "RTClib.h"
-RTC_DS1307 rtc;
+<pre class="src src-c"><span style="color: #5C6370; font-style: italic;">// </span><span style="color: #5C6370; font-style: italic;">Date and time functions using a DS1307 RTC connected via I2C and Wire lib</span>
+<span style="color: #828997;">#include</span> <span style="color: #98C379;">&lt;Wire.h&gt;</span>
+<span style="color: #828997;">#include</span> <span style="color: #98C379;">"RTClib.h"</span>
+<span style="color: #E5C07B;">RTC_DS1307</span> <span style="color: #E06C75;">rtc</span>;
 
-// constants won't change. Used here to set a pin number:
-const int relay =  2;
+<span style="color: #5C6370; font-style: italic;">// </span><span style="color: #5C6370; font-style: italic;">constants won't change. Used here to set a pin number:</span>
+<span style="color: #C678DD;">const</span> <span style="color: #E5C07B;">int</span> <span style="color: #E06C75;">relay</span> =  2;
 
-// start light off
-int ledState = HIGH;
+<span style="color: #5C6370; font-style: italic;">// </span><span style="color: #5C6370; font-style: italic;">start light off</span>
+<span style="color: #E5C07B;">int</span> <span style="color: #E06C75;">ledState</span> = HIGH;
 
-// t1 on
-int h1 = 7;
-// t2 off
-int h2 = 22;
+<span style="color: #5C6370; font-style: italic;">// </span><span style="color: #5C6370; font-style: italic;">t1 on</span>
+<span style="color: #E5C07B;">int</span> <span style="color: #E06C75;">h1</span> = 7;
+<span style="color: #5C6370; font-style: italic;">// </span><span style="color: #5C6370; font-style: italic;">t2 off</span>
+<span style="color: #E5C07B;">int</span> <span style="color: #E06C75;">h2</span> = 22;
 
-void setup () {
-  while (!Serial); // for Leonardo/Micro/Zero
+<span style="color: #E5C07B;">void</span> <span style="color: #61AFEF;">setup</span> () {
+  <span style="color: #C678DD;">while</span> (<span style="color: #56B6C2; font-weight: bold;">!</span>Serial); <span style="color: #5C6370; font-style: italic;">// </span><span style="color: #5C6370; font-style: italic;">for Leonardo/Micro/Zero</span>
   Serial.begin(9600);
   delay(3000);
-  if (! rtc.begin()) {
-    Serial.println("Couldn't find RTC");
-    while (1);
+  <span style="color: #C678DD;">if</span> (<span style="color: #56B6C2; font-weight: bold;">!</span> rtc.begin()) {
+    Serial.println(<span style="color: #98C379;">"Couldn't find RTC"</span>);
+    <span style="color: #C678DD;">while</span> (1);
   }
-  // following line sets the RTC to the date &amp; time this sketch was compiled
-  // uncomment to set new date time
-  // rtc.adjust(DateTime(F(__DATE__), F(__TIME__)));
+  <span style="color: #5C6370; font-style: italic;">// </span><span style="color: #5C6370; font-style: italic;">following line sets the RTC to the date &amp; time this sketch was compiled</span>
+  <span style="color: #5C6370; font-style: italic;">// </span><span style="color: #5C6370; font-style: italic;">uncomment to set new date time</span>
+  <span style="color: #5C6370; font-style: italic;">// </span><span style="color: #5C6370; font-style: italic;">rtc.adjust(DateTime(F(__DATE__), F(__TIME__)));</span>
 
   digitalWrite(relay, LOW);
   pinMode(relay, OUTPUT);
 }
-void loop () {
-  DateTime now = rtc.now();
+<span style="color: #E5C07B;">void</span> <span style="color: #61AFEF;">loop</span> () {
+  <span style="color: #E5C07B;">DateTime</span> <span style="color: #E06C75;">now</span> = rtc.now();
   Serial.println(now.hour());
   Serial.println(now.minute());
-  Serial.println(ledState ? "HIGH" : "LOW");
-  if (now.hour() &gt;= h1 &amp;&amp; ledState == HIGH &amp;&amp; now.hour() &lt; h2) {
-    // if the LED is off turn it on
-    Serial.println("Switching light on");
+  Serial.println(ledState ? <span style="color: #98C379;">"HIGH"</span> : <span style="color: #98C379;">"LOW"</span>);
+  <span style="color: #C678DD;">if</span> (now.hour() &gt;= h1 &amp;&amp; ledState == HIGH &amp;&amp; now.hour() &lt; h2) {
+    <span style="color: #5C6370; font-style: italic;">// </span><span style="color: #5C6370; font-style: italic;">if the LED is off turn it on</span>
+    Serial.println(<span style="color: #98C379;">"Switching light on"</span>);
     ledState = LOW;
-  } else if ((now.hour() &gt;= h2 || now.hour() &lt; h1) &amp;&amp; ledState == LOW) {
-    Serial.println("Switching light off");
+  } <span style="color: #C678DD;">else</span> <span style="color: #C678DD;">if</span> ((now.hour() &gt;= h2 || now.hour() &lt; h1) &amp;&amp; ledState == LOW) {
+    Serial.println(<span style="color: #98C379;">"Switching light off"</span>);
     ledState = HIGH;
   }
-  // set the LED with the ledState of the variable:
+  <span style="color: #5C6370; font-style: italic;">// </span><span style="color: #5C6370; font-style: italic;">set the LED with the ledState of the variable:</span>
   digitalWrite(relay, ledState);
   delay(3000);
 }
@@ -385,16 +341,16 @@ Here is my white mulberry grown from seeds taken on my street, white mullberries
 </div>
 </div>
 
-<div id="outline-container-orgccfbf07" class="outline-2">
-<h2 id="orgccfbf07"><span class="section-number-2">2</span> Linux RICE <a href="https://github.com/bcmertz/dotfiles">(Github)</a></h2>
+<div id="outline-container-orge30b988" class="outline-2">
+<h2 id="orge30b988"><span class="section-number-2">2</span> Linux RICE <a href="https://github.com/bcmertz/dotfiles">(Github)</a></h2>
 <div class="outline-text-2" id="text-2">
 <p>
 I run Arch Linux with a completely customized userspace that has tight integration and command keystroke parity between emacs, terminal, and various unix utilities. Pictured below is my i3 wm setup
 <img src="./public/rice.png" alt="rice.png" />
 </p>
 </div>
-<div id="outline-container-org771ca51" class="outline-3">
-<h3 id="org771ca51"><span class="section-number-3">2.1</span> Overview</h3>
+<div id="outline-container-orga12b315" class="outline-3">
+<h3 id="orga12b315"><span class="section-number-3">2.1</span> Overview</h3>
 <div class="outline-text-3" id="text-2-1">
 <p>
 These are some interesting scripts I've written to make my desktop tick, and sometimes fly:
@@ -419,15 +375,15 @@ These are some interesting scripts I've written to make my desktop tick, and som
 </div>
 </div>
 
-<div id="outline-container-org7a4fcd3" class="outline-2">
-<h2 id="org7a4fcd3"><span class="section-number-2">3</span> Open Source Coding Projects</h2>
+<div id="outline-container-org039b6ab" class="outline-2">
+<h2 id="org039b6ab"><span class="section-number-2">3</span> Open Source Coding Projects</h2>
 <div class="outline-text-2" id="text-3">
 <p>
 Open source is incredibly important to me, and I make every piece of software I write open souce and freely liscenced. Below are three of my favorite projects I've written over the last few years.
 </p>
 </div>
-<div id="outline-container-org65f9d14" class="outline-3">
-<h3 id="org65f9d14"><span class="section-number-3">3.1</span> Search Within Video (<a href="https://github.com/bcmertz/videosearch">Github</a> <a href="http://www.searchwithinvideo.com/">Website</a>)</h3>
+<div id="outline-container-org3c2eec7" class="outline-3">
+<h3 id="org3c2eec7"><span class="section-number-3">3.1</span> Search Within Video (<a href="https://github.com/bcmertz/videosearch">Github</a> <a href="http://www.searchwithinvideo.com/">Website</a>)</h3>
 <div class="outline-text-3" id="text-3-1">
 <p>
 Search Within Video allows you to upload a video or provide a youtube url that is downloaded and analyzed using OpenCV to see which frames are statistically most unique based off of mean squared error comparisons to the previous frame. These unique frames are then uploaded to an open source image classifier, and the results are returned to the user in the form of a searchable video. The user can search for an object such as "dog" and the video will load the timestamp of any dog occurence.
@@ -442,8 +398,8 @@ This project has a microservice architecture and runs the video parser and image
 </p>
 </div>
 </div>
-<div id="outline-container-org622f2fe" class="outline-3">
-<h3 id="org622f2fe"><span class="section-number-3">3.2</span> Ray Tracer (<a href="https://github.com/bcmertz/ray-tracer">Github</a>)</h3>
+<div id="outline-container-orgbbfd17e" class="outline-3">
+<h3 id="orgbbfd17e"><span class="section-number-3">3.2</span> Ray Tracer (<a href="https://github.com/bcmertz/ray-tracer">Github</a>)</h3>
 <div class="outline-text-3" id="text-3-2">
 <p>
 Pictured below is the sample output from my ray tracer. It can render shapes at different depths, with variable lighting and backgrounds. Shadows don't work properly but there should be support soon.
@@ -451,8 +407,8 @@ Pictured below is the sample output from my ray tracer. It can render shapes at 
 </p>
 </div>
 </div>
-<div id="outline-container-org67c0261" class="outline-3">
-<h3 id="org67c0261"><span class="section-number-3">3.3</span> Steganographic Encoder (<a href="https://github.com/bcmertz/steganographic-encoder">Github</a>)</h3>
+<div id="outline-container-orgd2f560d" class="outline-3">
+<h3 id="orgd2f560d"><span class="section-number-3">3.3</span> Steganographic Encoder (<a href="https://github.com/bcmertz/steganographic-encoder">Github</a>)</h3>
 <div class="outline-text-3" id="text-3-3">
 <p>
 This project somewhat sloppily hides messages and decodes them from pictures using least significant bit manipulation.
@@ -460,33 +416,33 @@ This project somewhat sloppily hides messages and decodes them from pictures usi
 </div>
 </div>
 </div>
-<div id="outline-container-org4f4c761" class="outline-2">
-<h2 id="org4f4c761"><span class="section-number-2">4</span> Emacs Build (<a href="https://github.com/bcmertz/dotfiles/tree/master/.emacs.d">Github</a>)</h2>
+<div id="outline-container-org6750def" class="outline-2">
+<h2 id="org6750def"><span class="section-number-2">4</span> Emacs Build (<a href="https://github.com/bcmertz/dotfiles/tree/master/.emacs.d">Github</a>)</h2>
 <div class="outline-text-2" id="text-4">
 <p>
 Emacs is the ideal extensible editor for all types of plain text, including code and latex. My custom build includes support for many useful tools including vim emulation, email, autocompletion, compilation, and many tweaks that make windowing inside of emacs work like it does in my window manager of choice i3. My custom build features 8 language configurations and 14 general purpose modules that configure everything from git support to editing
 <img src="./public/emacs-org-mode.png" alt="emacs-org-mode.png" />
 </p>
 </div>
-<div id="outline-container-org5c1b61d" class="outline-3">
-<h3 id="org5c1b61d"><span class="section-number-3">4.1</span> Measuring startup time</h3>
+<div id="outline-container-org7fa5391" class="outline-3">
+<h3 id="org7fa5391"><span class="section-number-3">4.1</span> Measuring startup time</h3>
 <div class="outline-text-3" id="text-4-1">
 <p>
 Startup performance of my custom build is monitored very closely. <a href="https://github.com/bcmertz/dotfiles/blob/master/.emacs.d/init.el#L22-L27">Here</a> I implement a module timer to track perfomance / load time of each custom module.
 </p>
 <div class="org-src-container">
-<pre class="src src-emacs-lisp">   ;; debug startup performance / load time using (measure-time(load "custom-module.el"))
-(defmacro measure-time (&amp;rest body)
-  "Measure the time it takes to evaluate BODY."
-  `(let ((time (current-time)))
+<pre class="src src-emacs-lisp">   <span style="color: #5C6370; font-style: italic;">;; </span><span style="color: #5C6370; font-style: italic;">debug startup performance / load time using (measure-time(load "custom-module.el"))</span>
+(<span style="color: #C678DD;">defmacro</span> <span style="color: #61AFEF;">measure-time</span> (<span style="color: #E5C07B;">&amp;rest</span> body)
+  <span style="color: #98C379;">"Measure the time it takes to evaluate BODY."</span>
+  `(<span style="color: #C678DD;">let</span> ((time (current-time)))
      ,@body
-     (message "%.06f" (float-time (time-since time)))))
+     (message <span style="color: #98C379;">"%.06f"</span> (float-time (time-since time)))))
 </pre>
 </div>
 </div>
 </div>
-<div id="outline-container-org73a71cc" class="outline-3">
-<h3 id="org73a71cc"><span class="section-number-3">4.2</span> Email</h3>
+<div id="outline-container-orgc525a7b" class="outline-3">
+<h3 id="orgc525a7b"><span class="section-number-3">4.2</span> Email</h3>
 <div class="outline-text-3" id="text-4-2">
 <p>
 I setup emacs as an email client using <a href="https://github.com/cemkeylan/mu-wizard/">https://github.com/cemkeylan/mu-wizard/</a> to set up mu4e! I am still amazed this works.
@@ -494,19 +450,19 @@ I setup emacs as an email client using <a href="https://github.com/cemkeylan/mu-
 </p>
 </div>
 </div>
-<div id="outline-container-org0540635" class="outline-3">
-<h3 id="org0540635"><span class="section-number-3">4.3</span> Emacs as window manager</h3>
+<div id="outline-container-org19a81c8" class="outline-3">
+<h3 id="org19a81c8"><span class="section-number-3">4.3</span> Emacs as window manager</h3>
 <div class="outline-text-3" id="text-4-3">
 <p>
 Emacs is very nearly an entire OS in it's own right. I use it as my window manager while programming for a distraction free environment tightly configured with multi-language integration. Here we load the emacs x window manager (exwm) config:
 </p>
 <div class="org-src-container">
-<pre class="src src-emacs-lisp">;; emacs as window manager
-(setq session (getenv "SESSION"))
-(if (equal session "emacs")
-    (progn
-      (message "managing windows")
-      (load "custom-exwm-config.el")
+<pre class="src src-emacs-lisp"><span style="color: #5C6370; font-style: italic;">;; </span><span style="color: #5C6370; font-style: italic;">emacs as window manager</span>
+(<span style="color: #C678DD;">setq</span> session (getenv <span style="color: #98C379;">"SESSION"</span>))
+(<span style="color: #C678DD;">if</span> (equal session <span style="color: #98C379;">"emacs"</span>)
+    (<span style="color: #C678DD;">progn</span>
+      (message <span style="color: #98C379;">"managing windows"</span>)
+      (load <span style="color: #98C379;">"custom-exwm-config.el"</span>)
       )
   )
 </pre>
@@ -514,8 +470,8 @@ Emacs is very nearly an entire OS in it's own right. I use it as my window manag
 </div>
 </div>
 
-<div id="outline-container-org7be5f30" class="outline-3">
-<h3 id="org7be5f30"><span class="section-number-3">4.4</span> Org Mode</h3>
+<div id="outline-container-org8818273" class="outline-3">
+<h3 id="org8818273"><span class="section-number-3">4.4</span> Org Mode</h3>
 <div class="outline-text-3" id="text-4-4">
 <p>
 This portfolio is written in an org document and exported to html, to see the original org text go <a href="https://github.com/bcmertz/bcmertz.github.io/blob/master/index.org">here</a>
@@ -526,8 +482,8 @@ I use org mode to track my list of todo items, and have built in functionality l
 </p>
 </div>
 </div>
-<div id="outline-container-org68557e4" class="outline-3">
-<h3 id="org68557e4"><span class="section-number-3">4.5</span> Latex dev environment and resume</h3>
+<div id="outline-container-org760bef3" class="outline-3">
+<h3 id="org760bef3"><span class="section-number-3">4.5</span> Latex dev environment and resume</h3>
 <div class="outline-text-3" id="text-4-5">
 <p>
 Within emacs I have setup a dev environment for editing <a href="https://github.com/bcmertz/dotfiles/blob/master/.emacs.d/lisp/languages/custom-latex.el">latex</a> with automatic compilation to pdf. Checkout my <a href="https://github.com/bcmertz/resume/blob/master/resume.pdf">resume</a> written in Latex.
@@ -539,7 +495,7 @@ Within emacs I have setup a dev environment for editing <a href="https://github.
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: Bennett Mertz</p>
-<p class="date">Created: 2021-01-26 Tue 12:52</p>
+<p class="date">Created: 2021-02-10 Wed 15:58</p>
 <p class="validation"><a href="http://validator.w3.org/check?uri=referer">Validate</a></p>
 </div>
 </body>
